# apurv

AIFoundation/AgentBuilder/: AddlIntegrations-Refactor.txt  AdvancedCachingCode-Refactor.txt  AdvancedDocker-Refactgor.txt  AdvancedMonitoring.txt  ComprehensiveTestingInfra-Refactor.txt  DeploymentGuide.md  KuberNetesCode-Refactor-Later.txt  LaunchList.Md  MissingBackendCode.txt  MissingFrontEndode.txt  ProjectStructure-Refactor.txt  README.md  SolutionDetails.md  docker-compose.yml  (+2 more)
PracticePlatform/ProgressNotes/backend/: .dockerignore  Dockerfile  alembic.ini  create_test_user.py  pyproject.toml  requirements.txt
PracticePlatform/ProgressNotes/backend/app/: auth.py  config.py  database.py  main.py  middleware.py
PracticePlatform/ProgressNotes/backend/app/models/: __init__.py  models.py
PracticePlatform/ProgressNotes/backend/app/routes/: __init__.py  auth.py  notes.py  patients.py  routes.py  templates.py  users.py
PracticePlatform/ProgressNotes/backend/app/schemas/: __init__.py  schemas.py
PracticePlatform/ProgressNotes/backend/app/services/: __init__.py  services.py
PracticePlatform/ProgressNotes/backend/migrations/: env.py
PracticePlatform/ProgressNotes/backend/tests/: conftest.py  test.py  test_auth.py  test_notes.py  test_patients.py
PracticePlatform/ProgressNotes/backend/utils/: audit.py  encryption.py  exceptions.py  file_handler.py  response_models.py  validators.py
SaasFoundation/: ACTIVITY_LOG_INTEGRATION.md  README.md  docker-compose.yml  init.sql  notification_init.sql  test_activity_log_integration.py
Website/: landingpage.html  v2.html
(+1268 files in other folders)
